--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ main .main_bg {
 /* 아티클2 */
 main .wrapper {
   height: 100vh;
-  padding: 100px;
+  padding: 0 100px 100px;
   display: grid; gap: 1px;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 50vh;
@@ -196,7 +196,7 @@ main .wrapper::after {
   background-color: #000;
 }
 main .wrapper .box {
-  padding: 80px 40px;
+  padding: 80px 40px ;
 }
 
 /* 아티클3 */
